# iptv

./: .gitignore  AGENT.md  AGENTS.md  IPTV-list.m3u  LICENSE  Makefile  README.md  categories.txt  go.mod  go.sum  pyproject.toml  revert_patch.patch  run_with_env.sh  test.sh
.github/workflows/: filter-m3u.yml
cmd/iptv-filter/: main.go
internal/config/: config.go  config_test.go
internal/epg/: epg_test.go  processor.go
internal/m3u/: m3u_test.go  processor.go
internal/s3/: s3_test.go  upload.go
internal/utils/: compress.go  http.go  logger.go  retry.go  utils_test.go
src/: __init__.py  run_filter.py
src/m3u_simple_filter/: __init__.py  config.py  epg_processor.py  m3u_processor.py  main.py  s3_operations.py  utils.py
tests/: conftest.py  test_comprehensive.py  test_config.py  test_epg_processor.py  test_m3u_processor.py  test_main.py  test_s3_operations.py  test_simple_playlist.py  test_url_tvg_replacement.py
